--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -5,7 +5,7 @@
 <!-- BEGIN HEAD -->
 <head>
   <meta charset="utf-8" />
-  <title>WeRework Engine Platform</title>
+  <title>i/oGrow Engine Platform</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="" name="description" />
   <meta content="" name="author" />
@@ -39,7 +39,7 @@
       <div class="container-fluid">
         <!-- BEGIN LOGO -->
         <a class="brand" href="index.html">
-        <img src="static/img/google_logo_41.png" width="125" alt="logo"  /> 
+        <img src="static/img/IO_Grow.png" width="125" alt="logo"  /> 
         </a>
         <!-- END LOGO -->
         <!-- BEGIN RESPONSIVE MENU TOGGLER -->
@@ -66,9 +66,12 @@
               <div class="container">
                 <div class="row-fluid margin-bottom-20">
                   <div class="span8 margin-bottom-20 product-info">
-                    <h2>Metronic Viverra</h2>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos <a href="#">ellentesque la vehi</a> dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique. Pellentesque viverra vehicula sem ut volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut non libero magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
-                    <p>Lunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita <a href="#">distinctio lorem ipsum dolor</a> sit amet, consectetur adipiscing elit. Ut non libero consectetur adipiscing elit magna. Sed et quam lacus. Fusce condimentum eleifend enim a feugiat.</p>
+                    <h2>i/oGrow Platform</h2>
+                   <ul>
+                    <li>i/oGrow is a platform targeted startups and small companies to grow their business, assisting them to build and manage an effective eco-system of customers, partners and organizations. </li>
+<li>We believe that simplicity, speed, ease of use, and clarity are very important on a daily business work.</li>
+<li>i/oGrow is API-first platfrom, designed  for developers, independent software vendors and customers aiming to connect different applications and third-party services. Google Cloud Endpoints allows us to build an API that feels and behaves like Google services APIs such as Google Drive API; That helps developers to understand the API easier. <a href="/_ah/api/explorer" target="_blank">(i/oGrow API explorer)</a></li>
+                    </ul>
                   </div>
                   <div class="span4 margin-bottom-20">
                      <div class="signin-box"> 
@@ -78,9 +81,8 @@
                         <form class="sign-up-form" action="" method="POST">
                           <label><strong>Organization name:</strong></label>
                           <input required autofocus type="text" name="org_name" >
-                          <label><strong>Mobile phone:</strong></label>
-                          <input required type="text" name="mob_phone">
-                          <button class="btn blue pull-right next-step">Next step</button>
+                          
+                          <button type="submit" class="btn blue pull-right next-step">Next step</button>
 
                         </form>
                      </div>
@@ -101,7 +103,7 @@
   <!-- BEGIN FOOTER -->
   <div class="footer">
     <div class="footer-inner">
-      2013 &copy; Metronic by keenthemes.
+      2013 &copy; i/oGrow.
     </div>
    
   </div>
