--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -246,18 +246,21 @@
                                   <strong>Website</strong>
                                   
                                 </div>
-                                <ul class="unstyled contact-infos">
-                                    <li><a href="#">www.clicandcal.com</a> </li>
+                                <ul class="unstyled contact-infos" >
+                                    <li ng-repeat="web in account.websites"><a href="<%=web.website%>"><%=web.website%></a> </li>
                                     <li><a href="#websitemodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new Website </a></li>
-                                </ul> 
+                                    
+                                </ul>
+                                 
                                 <div class="news-block-tags">
                                   <strong>Social Links</strong>
                                   
                                 </div>
-                                <ul class="unstyled contact-infos">
-                                    <li><a href="#">facebook.com/clicandcal</a> </li>
-                                    <li><a href="#socialmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new social links </a></li>
-                                </ul>                       
+                                <ul class="unstyled contact-infos" >
+                                    <li ng-repeat="social in account.sociallinks"><a href="<%=social.sociallink%>"></a> <%=social.sociallink%> </li>
+                                  <li><a href="#socialmodal" class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i> Add a new social links </a></li>    
+                                </ul>
+                                                    
                               </div>
                           </div>
                           <div class="span6">
@@ -268,13 +271,13 @@
                                   <strong>Tagline</strong>
                                   
                                 </div>
-                                <p>Accelerating the Cloud Powered Business </p>
+                                <p><%=account.tagline%> </p>
 
                                 <div class="news-block-tags">
                                   <strong>Introduction</strong>
                                   
                                 </div>
-                                <p>Appirio is a global technology-enabled services provider, helping companies power their business with cloud, social and mobile technologies from leaders like salesforce.com, Google and Workday. Appirio has worked with more than 400 enterprise customers including organizations like the City of Los Angeles, Facebook, Flextronics, International Hotels Group, Japan Post Network, Ltd., L'Oreal, NetApp, NYU, Starbucks, Thomson Reuters and VMware. Appirio's technology-enabled professional services are supported by a team of 600 cloud experts and CloudSpokes, a more than 70,000 person-strong global cloud developer community. The company's expertise and innovation have been recognized by organizations such as the World Economic Forum, Bloomberg BusinessWeek, The Wall Street Journal, InformationWeek and IDC. Appirio has offices that span the U.S., Europe and Asia Pacific, and is backed by Sequoia Capital, GGV Capital and General Atlantic.</p>                         
+                                <p><%=account.introduction%></p>                         
                               </div>
                             
                           </div>
@@ -1092,12 +1095,12 @@
                 <h3 id="myModalLabel">{{_("Add Website")}}</h3>
             </div>
             <div class="modal-body">
-                  <form id="addWebsite" name="addwebsite" ng-submit="save(website)" class="form-horizontal"> 
+                  <form id="addWebsite" name="addwebsite" ng-submit="addWebsite(website)" class="form-horizontal"> 
                   <fieldset>
                     <div class="control-group">
                         <label  class="control-label">{{_("Website")}} </label>
                         <div class="controls">
-                          <input type="text" placeholder="Website" required id="id_website" ng-model="website.name">
+                          <input type="text" placeholder="Website" required id="id_website" ng-model="website.website">
                         </div>
                      </div>
               </div>
@@ -1119,12 +1122,12 @@
                 <h3 id="myModalLabel">{{_("Add Social link")}}</h3>
             </div>
             <div class="modal-body">
-                  <form id="addSocial" name="addsocial" ng-submit="save(website)" class="form-horizontal"> 
+                  <form id="addSocial" name="addsocial" ng-submit="addSocial(social)" class="form-horizontal"> 
                   <fieldset>
                     <div class="control-group">
                         <label  class="control-label">{{_("Social link")}} </label>
                         <div class="controls">
-                          <input type="text" placeholder="Social link"  required id="id_social" ng-model="social.name">
+                          <input type="text" placeholder="Social link"  required id="id_social" ng-model="social.sociallink">
                         </div>
                      </div>
               </div>
