--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <!-- BEGIN LOGO -->
         <a class="brand" href="/#/accounts/">
-        <img src="static/img/iogrow_gool.png" width="125" alt="logo"  /> 
+        <img src="static/img/IO_Grow.png" width="125" alt="logo"  /> 
         </a>
         <!-- END LOGO -->
         <!-- BEGIN RESPONSIVE MENU TOGGLER -->
