--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -71,6 +71,24 @@
                           
                         </div>
                     </div>
+                    <hr/>
+                    <p>Who can access?</p>
+                     <div class='container-fluid'>
+
+                     
+                          
+                            <label class="radio line">
+                            <input type="radio" value="public" ng-model="contact.access" />
+                            public: Anyone within your organization
+                            </label>
+                            <label class="radio line">
+                            <input type="radio"  value="private" ng-model="contact.access" />
+                            private: only you and your collaborators
+                            </label>  
+                           
+                       
+                      
+                    </div>
                     </fieldset>
                 
               </div>
