--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -53,10 +53,10 @@
                         </div>
                     </div>
                     <div class="control-group">
-                        <label  class="required control-label">{{_("Description")}} </label>
+                        <label  class="required control-label">{{_("Labels")}} </label>
                        
                         <div class="controls">
-                          <input type="text"  id="id_description" ng-model="opportunity.description">
+                          <input type="text"  id="id_description" ng-model="opportunity.description" placeholder="Add labels to categorize your deals">
                           
                         </div>
                     </div>
@@ -77,6 +77,24 @@
                         </div>
 
                           
+                    </div>
+                    <hr/>
+                    <p>Who can access?</p>
+                     <div class='container-fluid'>
+
+                     
+                          
+                            <label class="radio line">
+                            <input type="radio" value="public" ng-model="opportunity.access" />
+                            public: Anyone within your organization
+                            </label>
+                            <label class="radio line">
+                            <input type="radio"  value="private" ng-model="opportunity.access" />
+                            private: only you and your collaborators
+                            </label>  
+                           
+                       
+                      
                     </div>
                   
                     
