--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -82,6 +82,24 @@
                           
                         </div>
                     </div>
+                    <hr/>
+                    <p>Who can access?</p>
+                     <div class='container-fluid'>
+
+                     
+                          
+                            <label class="radio line">
+                            <input type="radio" value="public" ng-model="casee.access" />
+                            public: Anyone within your organization
+                            </label>
+                            <label class="radio line">
+                            <input type="radio"  value="private" ng-model="casee.access" />
+                            private: only you and your collaborators
+                            </label>  
+                           
+                       
+                      
+                    </div>
                    
 
                     </fieldset>
