Retrive autcomplet Contact--> Account

--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -142,7 +142,8 @@
                       <%= opp.name %> 
                     </h2></a>
                     <div class="desc">                           
-                    <a class="desc" href="/#/search/type:Opportunity <%=opp.amount%>" ng-show="opp.amount">#<%=opp.amount%></a> 
+                    <span ng-show="opp.amount" class="desc"><a  href="/#/search/type:Opportunity <%=opp.amount%>"> #<%=opp.amount%></a></span>
+                     
                     <a class="desc" href="/#/search/type:Opportunity <%=opp.stage%>" ng-show="opp.stage">- #<%=opp.stage%></a><br>
                     <a class="desc" href="/#/search/type:Opportunity <%=opp.description%>" ng-show="opp.description">#<%=opp.description%></a>
                     </div>
