Contcat model change

--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -140,7 +140,7 @@
                     </h2></a>
                     <div class="desc">                           
                       
-                    <a  class="desc" href="/#/contacts/industry/<%=contact.industry%>">#<%=contact.company%></a>
+                    <a  class="desc" href="/#/contacts/industry/<%=contact.industry%>">#<%=contact.title%></a> at <a  class="desc" href="/#/contacts/industry/<%=contact.industry%>">#<%=contact.account_name%></a>
                     </div>
                   </div>
                   <a class="more" href="/#/contacts/show/<%= contact.id %>">
