--- a/templates/base.html
+++ b/templates/base.html
@@ -211,10 +211,10 @@
 
 
 
-       var ROOT = '/_ah/api';
+       //var ROOT = '/_ah/api';
 
    
-        //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
             var callback = function() {
         if (--apisToLoad == 0) {
